Tetris-V2/kubernates/ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-ingress-minikube
  namespace: tetris
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tetris.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80
